--- a/ClassBoard/ClassBoard/ClassBoard-Info.plist
+++ b/ClassBoard/ClassBoard/ClassBoard-Info.plist
@@ -33,6 +33,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>nevis.ttf</string>
+		<string>walkway.ttf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
